--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Maceng",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "Rest Api",
   "main": "index.js",
   "scripts": {
@@ -14,8 +14,7 @@
   "keywords": [
     "simple",
     "api",
-    "rest",
-    "api",
+    "rest"
   ],
   "author": "Maceng",
   "license": "MIT",
